syntax = "proto3";
package todoPackage;

service Todo {
    rpc createTodo(TodoItem) returns (TodoItem){};
    rpc readTodos(voidNoParams) returns (TodoItems){};
    rpc readTodosStream(voidNoParams) returns ( stream TodoItem );
};


message voidNoParams {   };
message TodoItem {
    int32 id = 1;
    string text = 2;
};


message TodoItems {
    // Array --> by using repeated ! 
    repeated TodoItem items =  1;
};